use User dto in responses, update auth to use name, update auth to login after signup
