# src/controllers/auth.controller.ts
@@ -1,8 +1,10 @@
 import { NextFunction, Request, Response } from 'express';
 import { CreateUserDto } from '../dtos/users.dto';
+import { AuthDto } from '../dtos/auth.dto';
 import { RequestWithUser } from '../interfaces/auth.interface';
 import { User } from '../interfaces/users.interface';
 import AuthService from '../services/auth.service';
+import UserService from '../services/users.service';
 
 class AuthController {
   public authService = new AuthService();
@@ -10,9 +12,10 @@ class AuthController {
   public signUp = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
     try {
       const userData: CreateUserDto = req.body;
-      const signUpUserData: User = await this.authService.signup(userData);
+      const { cookie, user } = await this.authService.signup(userData);
 
-      res.status(201).json({ data: signUpUserData, message: 'signup' });
+      res.setHeader('Set-Cookie', [cookie]);
+      res.status(201).json({ data: user, message: 'signup' });
     } catch (error) {
       next(error);
     }
@@ -20,11 +23,12 @@ class AuthController {
 
   public logIn = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
     try {
-      const userData: CreateUserDto = req.body;
-      const { cookie, findUser } = await this.authService.login(userData);
+      const authData: AuthDto = req.body;
+      const userData: CreateUserDto = { email: '', ...authData };
+      const { cookie, user } = await this.authService.login(userData);
 
       res.setHeader('Set-Cookie', [cookie]);
-      res.status(200).json({ data: findUser, message: 'login' });
+      res.status(200).json({ data: user, message: 'login' });
     } catch (error) {
       next(error);
     }
@@ -34,9 +38,9 @@ class AuthController {
     try {
       const userData: User = req.user;
       const logOutUserData: User = await this.authService.logout(userData);
-
+      const user = UserService.toDTO(logOutUserData);
       res.setHeader('Set-Cookie', ['Authorization=; Max-age=0']);
-      res.status(200).json({ data: logOutUserData, message: 'logout' });
+      res.status(200).json({ data: user, message: 'logout' });
     } catch (error) {
       next(error);
     }
